[gd_scene load_steps=3 format=3 uid="uid://d3w0jjcfn1dxd"]

[ext_resource type="Script" path="res://bullet.gd" id="1_pllol"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7pq6"]

[node name="Bullet" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_pllol")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b7pq6")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="bullet_hit" from="." to="." method="_on_bullet_hit"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
